<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="3"
            android:text="@string/app_name"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="3"
            android:id="@+id/sample_edittext_1"
            android:hint="@string/sample_text1"/>
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="3"
            android:id="@+id/sample_button_1"
            android:text="@string/sample_button1_label"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="2"
            android:id="@+id/sample_textview_1"
            android:text="@string/sample_text2_before"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:id="@+id/sample_button_2"
            android:text="@string/sample_button2_label"/>
    </TableRow>
</TableLayout>